--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main class="main-container">
-      <!-- 商品 -->
+      <!-- 商品 git pull & git fetch & git merge -->
       <section class="section">
         <h2 class="text-center">商品-master</h2>
         <div class="products">
